# pretty-pdf

./: .gitignore  pyproject.toml
_src/: app.py
_src/interfaces/: objects.py
fs/adapters/: PdfBuilderAdapter.py  TemplateEngineAdapter.py
fs/app/: PdfService.py  TemplateRenderService.py  TemplateService.py
fs/app/interfaces/: JinjaAdapter.py  PdfBuilder.py  TemplateEngine.py
fs/utils/: console.py  data.py
scripts/: console.py
src/: PdfGenerator.py  TemplateRender.py  app.py  server.py
src/adapters/: PdfBuilderAdapter.py  TemplateEngineAdapter.py
src/app/: TemplateService.py
src/app/interfaces/: TemplateEngine.py
src/controllers/: ApiController.py  GenerationController.py  LibController.py
src/interfaces/: aliases.py
src/services/: PdfGenerator.py  PdfService.py  TemplateRender.py  TemplateService.py
src/services/interfaces/: PdfBuilder.py  TemplateEngine.py
src/utils/: data.py
