[tool.poetry]
name = "pretty-pdf"
version = "0.1.0"
description = ""
authors = ["BearingMe <gomes.bruno201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
weasyprint = "^61.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
