[tool.poetry]
name = "pretty-pdf"
version = "0.1.2"
description = ""
authors = ["BearingMe <gomes.bruno201@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
weasyprint = "^61.0"
rich = "^13.7.0"
black = "^24.2.0"
fastapi = "^0.110.0"

[tool.poetry.scripts]
start = "scripts.console:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
